# LazyScan

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  2025-09-23-caveat-the-messages-below-were-generated-by-the-u.txt  AGENTS.md  API_DOCUMENTATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  ENHANCEMENT_ROADMAP.md  IMPROVEMENT_PLAN.md  LEGAL_DISCLAIMER.md  MANIFEST.in  MIGRATION_CHECKLIST.md  MONITORING_SETUP.md  PRD.md  README.md  README_PYPI.md  README_chrome_feature.md  SECURITY_INTEGRATION.md  TASK_8_1_ASSESSMENT.md  TECHNICAL_IMPLEMENTATION_GUIDE.md  WARP.md  bigfile_map.py  cache_list_20251004_001712.txt  code_analysis_report.md  codecov.yml  constraints.txt  distribute.py  install.sh  lazyscan.py  lazyscan_original.py  lazyspace.py  mypy.ini  pyproject.toml  pytest.ini  release.sh  requirements-dev.txt  (+9 more)
.claude/: settings.local.json
.github/: CODEOWNERS  REPOSITORY_SETUP.md
.github/workflows/: build.yml  ci.yml  coverage.yml  lint-format.yml  opencode.yml  release.yml  security.yml  test-matrix.yml
.opencode/agent/: deployment-engineer.md  quality-analyst.md  security-reviewer.md  senior-python-developer.md  task-master-pm.md  tech-lead-architect.md
.taskmaster/: config.json  state.json
.taskmaster/docs/research/: 2025-10-04_dependency.md
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  tasks.json
bigfile_map.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ci_validation_results/: validation_report.md
docs/: CI_CD_PIPELINE.md  ENCRYPTED_AUDIT_SCHEMA.md  LOGGING_MIGRATION_GUIDE.md  PRD.md  SECRET_SERVICE_INTEGRATION.md  STRUCTURED_LOGGING_SUMMARY.md  testing-plan.md
docs/ci-cd/: BRANCH_PROTECTION.md  CI_CD_OVERVIEW.md  OIDC_SETUP.md
helpers/: README_unity_hub.md  __init__.py  audit.py  chrome_cache_helpers.py  chromium_cache_helpers.py  confirmation.py  firefox_cache_helpers.py  recovery.py  safari_cache_helpers.py  secure_operations.py  security.py  unity_cache_helpers.py  unity_hub.py  unity_version.py  unreal_cache_helpers.py  unreal_launcher.py  unreal_version.py
lazyscan/: __init__.py
lazyscan/apps/: __init__.py  brave.py  chrome.py  edge.py  firefox.py  safari.py  unity.py  unreal.py  vscode.py
lazyscan/cli/: __init__.py  main.py  main.py.backup  main.py.tmp  main_argparse.py  main_broken.py
lazyscan/core/: __init__.py  cache_targets.py  config.py  docker_integration.py  errors.py  formatting.py  logging_config.py  plugins.py  retention_policy.py  scan.py  scanner.py  serialization.py  ui.py
lazyscan/security/: __init__.py  audit_encryption.py  audit_encryption_schema.py  audit_migration.py  default_policy.json  log_reencryption_tool.py  recovery_decryptor.py  safe_delete.py  sentinel.py  validators.py
lazyscan/security/key_providers/: __init__.py  secret_service_key_provider.py  windows_credential_manager.py
lazyscan/utils/: __init__.py  logging_config.py
reports/: .gitignore  README.md
scripts/: analyze_patterns.sh  start_improvement.sh
tests/: conftest.py  test_chromium_cache_helpers.py  test_end_to_end_logging.py  test_end_to_end_unity_reports.py  test_lazyscan.py  test_selection_parser.py  test_unity.py  test_unity_cache_helpers.py  test_unity_hub.py  test_unity_version.py  test_unreal_cache_helpers.py  test_unreal_integration.py  test_unreal_launcher.py
tests/apps/: test_chrome.py  test_firefox.py  test_safari.py
tests/cli/: test_cache_command.py  test_scan_command.py
tests/core/: test_docker_integration.py  test_error_logging_integration.py  test_errors.py  test_formatting.py  test_logging_config.py  test_retention_policy.py  test_scan_benchmark.py  test_scanner.py  test_ui.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/security/: test_audit_encryption.py  test_audit_encryption_comprehensive.py  test_audit_encryption_schema.py  test_audit_migration.py  test_log_reencryption_tool.py  test_recovery_decryptor.py  test_safe_delete.py  test_secret_service_key_provider.py  test_sentinel.py  test_validators.py  test_windows_credential_manager.py
tests/unit/: __init__.py
tests/utils/: test_logging_config.py
